--- a/app/views/form_items/_form.html.haml
+++ b/app/views/form_items/_form.html.haml
@@ -4,7 +4,7 @@
   .form-inputs
     - if action_name == 'new' || action_name == 'create'
       - types = FormItem.types_collection
-      = f.input :type, as: :radio_buttons, item_wrapper_class: 'radio-inline radio-form-margin', collection: types
+      = f.input :type, as: :radio_buttons, item_wrapper_class: 'radio-inline radio-form', collection: types
     = f.input :label
 
   .form-group
