Add progress bar on checklist

--- a/app/views/checklists/index.html.haml
+++ b/app/views/checklists/index.html.haml
@@ -28,4 +28,4 @@
           %td= checklist.start_at
           %td= checklist.due_at
           %td= checklist.checker
-          %td.text-nowrap= icon 'check-circle status', '提出済み'
+          %td= status_or_progress(checklist)
