Add autofocus to form

--- a/app/views/checklists/_form.html.haml
+++ b/app/views/checklists/_form.html.haml
@@ -2,7 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :title
+    = f.input :title, autofocus: true
     = f.input :start_at
     = f.input :due_at
     = f.input :checker
