--- a/app/views/form_items/template/_number_field.html.haml
+++ b/app/views/form_items/template/_number_field.html.haml
@@ -7,5 +7,4 @@
         .col-sm-8
           = number_field_tag "form[#{ form_item.id }]", form_item.value, class: 'form-control', placeholder: '数値を入力してください'
   .media-right.media-middle.text-nowrap
-    = link_to '編集', edit_form_item_path(form_item)
-    = link_to '削除', form_item, method: :delete, data: { confirm: t('message.delete_confirm') }, class: 'delete-action'
+    = option_link_to(form_item)
