--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,11 @@ th {
   @extend .form-group;
   margin: 0 0 5px 0 !important;
 }
+.form-group-input {
+  @extend .form-group;
+  margin-left:  0 !important;
+  margin-top: 5px !important;
+}
 .required-text {
   margin-left: 5px;
 }
@@ -61,10 +66,11 @@ th {
 }
 .heading {
   @extend .page-header;
-  margin-bottom: -8px;
+  margin-bottom: -6px;
 }
 .help-text {
-  margin-top: 5px;
+  margin-top:     3px;
+  margin-bottom: -3px;
 }
 
 // Define custom checkbox style
@@ -72,7 +78,7 @@ th {
   @extend .media;
   margin: 0 0 -10px -5px;
   .icon-checkbox-body {
-    padding-top: 5px;
+    padding-top: 4px;
   }
 }
 .icon-checkbox-left {
