--- a/app/views/form_items/template/_help_text.html.haml
+++ b/app/views/form_items/template/_help_text.html.haml
@@ -2,6 +2,6 @@
 .media
   .media-body.media-middle
     .col-xs-12
-      = auto_link_text(form_item.label)
+      .help-text= auto_link_text(form_item.label)
   .media-right.media-middle.text-nowrap
     = option_link_to(form_item)
