Add auto indent to help_text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,6 +72,9 @@ th {
   margin-top:     3px;
   margin-bottom: -3px;
 }
+.double-indent {
+  margin-left: 38px;
+}
 
 // Define custom checkbox style
 .icon-checkbox {
