--- a/app/views/form_items/template/_checkbox.html.haml
+++ b/app/views/form_items/template/_checkbox.html.haml
@@ -7,6 +7,6 @@
           %input{ type: 'checkbox' }
           %span
       .icon-checkbox-body
-        = form_item.label
+        = item.label
   .media-right.media-middle.text-nowrap
-    = option_link_to(form_item)
+    = option_link_to(item)
