--- a/app/views/form_items/template/_heading.html.haml
+++ b/app/views/form_items/template/_heading.html.haml
@@ -2,6 +2,6 @@
 .media
   .media-body.media-middle
     %h4.m-t-0.m-b-0
-      = form_item.label
+      = item.label
   .media-right.media-middle.text-nowrap
-    = option_link_to(form_item)
+    = option_link_to(item)
