--- a/app/views/form_items/checklist/_help_text.html.haml
+++ b/app/views/form_items/checklist/_help_text.html.haml
@@ -1,4 +1,3 @@
 -#テキスト
 .form-group.m-l-0.m-b-0
-  .col-xs-12
-    .help-text= auto_link_text(form_item.label)
+  = indented_help_text(item, form_items)
