--- a/app/views/form_items/template/_help_text.html.haml
+++ b/app/views/form_items/template/_help_text.html.haml
@@ -1,7 +1,6 @@
 -#テキスト
 .media
   .media-body.media-middle
-    .col-xs-12
-      .help-text= auto_link_text(form_item.label)
+    = indented_help_text(item, form_items)
   .media-right.media-middle.text-nowrap
-    = option_link_to(form_item)
+    = option_link_to(item)
