--- a/app/views/templates/show.html.haml
+++ b/app/views/templates/show.html.haml
@@ -44,6 +44,6 @@
   = link_to '項目の追加', new_template_form_item_path(@template)
 %hr
 
-- @form_items.each do |form_item|
-  = render partial: "form_items/template/#{ form_item.class.name.underscore }", locals: { form_item: form_item }
+- @form_items.each do |item|
+  = render partial: "form_items/template/#{ item.class.name.underscore }", locals: { item: item, form_items: @form_items }
   %hr
