--- a/app/assets/stylesheets/bootstrap-customized-classes.scss
+++ b/app/assets/stylesheets/bootstrap-customized-classes.scss
@@ -66,6 +66,10 @@
 .radio-inline:first-child {
   padding-left: 30px;
 }
+// Media object
+.media {
+  margin-top: 10px !important;
+}
 
 // Utility classes of Bootstrap4-alpha
 // Spacing
