--- a/app/views/checklists/show.html.haml
+++ b/app/views/checklists/show.html.haml
@@ -15,12 +15,10 @@
           = link_to '削除', @checklist, method: :delete, data: { confirm: t('message.delete_confirm') }, class: 'delete-action'
 
 .row
-  .col-xs-12
+  .col-xs-6
     %dl.dl-horizontal
       %dt= t('activerecord.attributes.checklist.id')
       %dd= @checklist.id
-  .col-xs-6
-    %dl.dl-horizontal
       %dt= t('activerecord.attributes.checklist.start_at')
       %dd= @checklist.start_at
       %dt= t('activerecord.attributes.checklist.due_at')
@@ -29,6 +27,8 @@
       %dd= @checklist.checker
   .col-xs-6
     %dl.dl-horizontal
+      %dt= t('activerecord.models.template')
+      %dd= link_to_template @checklist.template
       %dt ステータス
       %dd
         = status_or_progress(@checklist)
