--- a/app/views/form_items/template/_checkbox.html.haml
+++ b/app/views/form_items/template/_checkbox.html.haml
@@ -1,5 +1,5 @@
 -#チェックボックス
-.media
+.media.sorted-item{ id: "itemid_#{ item.id }" }
   .media-body.media-middle
     .col-sm-offset-4.col-sm-8
       .media.icon-checkbox
