--- a/app/views/form_items/template/_help_text.html.haml
+++ b/app/views/form_items/template/_help_text.html.haml
@@ -1,5 +1,5 @@
 -#テキスト
-.media
+.media.sorted-item{ id: "itemid_#{ item.id }" }
   .media-body.media-middle
     = indented_help_text(item, form_items)
   .media-right.media-middle.text-nowrap
