--- a/app/views/form_items/template/_textarea.html.haml
+++ b/app/views/form_items/template/_textarea.html.haml
@@ -1,5 +1,5 @@
 -#フォーム[テキストエリア]
-.media
+.media.sorted-item{ id: "itemid_#{ item.id }" }
   .media-body.media-middle
     %form.form-horizontal
       .form-group-template
