--- a/app/views/templates/show.html.haml
+++ b/app/views/templates/show.html.haml
@@ -34,10 +34,15 @@
 
 %hr.separator
 
-.text-right
-  = link_to '項目の追加', new_template_form_item_path(@template)
+%ul.list-inline.text-right
+  - if @sortable
+    %li= link_to '並び替えOFF', @template
+  - else
+    %li= link_to '並び替えON', template_path(@template, sortable: true)
+  %li= link_to '項目の追加', new_template_form_item_path(@template)
 %hr.m-b-0
 
-.item-sortable{ data: { update_url: reorder_template_form_items_path(@template) } }
+- klass = @sortable ? 'item-sortable' : ''
+%div{ class: klass, data: { update_url: reorder_template_form_items_path(@template) } }
   - @form_items.each do |item|
     = render partial: "form_items/template/#{ item.class.name.underscore }", locals: { item: item, form_items: @form_items }
