--- a/app/views/form_items/template/_heading.html.haml
+++ b/app/views/form_items/template/_heading.html.haml
@@ -4,4 +4,4 @@
     %h4.m-t-0.m-b-0
       = item.label
   .media-right.media-middle.text-nowrap
-    = option_link_to(item)
+    = option_link_to(item, sortable)
