--- a/app/views/form_items/template/_help_text.html.haml
+++ b/app/views/form_items/template/_help_text.html.haml
@@ -3,4 +3,4 @@
   .media-body.media-middle
     = indented_help_text(item, form_items)
   .media-right.media-middle.text-nowrap
-    = option_link_to(item)
+    = option_link_to(item, sortable)
