--- a/app/views/form_items/template/_checkbox.html.haml
+++ b/app/views/form_items/template/_checkbox.html.haml
@@ -10,4 +10,4 @@
         .media-body.media-middle
           = auto_link_text(item.label)
   .media-right.media-middle.text-nowrap
-    = option_link_to(item)
+    = option_link_to(item, sortable)
