--- a/app/views/form_items/template/_number_field.html.haml
+++ b/app/views/form_items/template/_number_field.html.haml
@@ -7,4 +7,4 @@
         .col-sm-8
           = text_field_tag "form[#{ item.id }]", item.value, class: 'form-control', placeholder: '数値を入力してください'
   .media-right.media-middle.text-nowrap
-    = option_link_to(item)
+    = option_link_to(item, sortable)
