--- a/app/views/form_items/template/_textarea.html.haml
+++ b/app/views/form_items/template/_textarea.html.haml
@@ -7,4 +7,4 @@
         .col-sm-8
           = text_area_tag "form[#{ item.id }]", item.value, class: 'form-control', rows: 3, placeholder: 'テキストを入力してください'
   .media-right.media-middle.text-nowrap
-    = option_link_to(item)
+    = option_link_to(item, sortable)
