Modify heading font weight

--- a/app/views/form_items/template/_heading.html.haml
+++ b/app/views/form_items/template/_heading.html.haml
@@ -1,7 +1,7 @@
 -#見出し
 .media.sorted-item{ id: "itemid_#{ item.id }" }
   .media-body.media-middle
-    %h4.m-t-0.m-b-0
-      = item.label
+    .heading
+      %h4= item.label
   .media-right.media-middle.text-nowrap
     = option_link_to(item, sortable)
