Modify input form from radio to select

--- a/app/views/form_items/_form.html.haml
+++ b/app/views/form_items/_form.html.haml
@@ -5,7 +5,7 @@
     = f.input :label, autofocus: true
     - if action_name == 'new' || action_name == 'create'
       - types = FormItem.types_collection
-      = f.input :type, as: :radio_buttons, item_wrapper_class: 'radio-inline radio-form', collection: types
+      = f.input :type, as: :select, collection: types, include_blank: false
 
   .form-group
     .form-actions
